UI: Adding typeahead.minLength option (default 2)

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -75,7 +75,7 @@
                 uib-typeahead="item for item in getTypeaheadValues( input, $viewValue )"
                 typeahead-editable="false"
                 typeahead-on-select="onSelectTypeahead( input, $item, $model, $label )"
-                typeahead-min-length="2"
+                typeahead-min-length="input.typeahead.minLength"
                 cn-change="check( input.key )"
                 class="form-control"
                 ng-class="{ 'loading-small': input.typeahead.isLoading }"
@@ -90,7 +90,7 @@
                 uib-typeahead="item.id as item.value for item in getTypeaheadValues( input, $viewValue )"
                 typeahead-editable="false"
                 typeahead-on-select="onSelectTypeahead( input, $item, $model, $label )"
-                typeahead-min-length="2"
+                typeahead-min-length="input.typeahead.minLength"
                 cn-change="check( input.key )"
                 class="form-control"
                 ng-class="{ 'loading-small': input.typeahead.isLoading }"
