Fixing bug in last commit

--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -143,7 +143,7 @@
                     uib-typeahead="item for item in getTypeaheadValues( input, $viewValue )"
                     typeahead-editable="false"
                     typeahead-on-select="onSelectTypeahead( input, $item, $model, $label )"
-                    typeahead-min-length="{{ input.typeahead.minLength }}"
+                    typeahead-min-length="input.typeahead.minLength"
                     cn-change="!model.viewModel.formattedRecord[input.key] && onEmptyTypeahead( input.key )"
                     class="form-control"
                     ng-class="{ 'loading-small': model.module.getInput( input.key ).typeahead.isLoading }"
@@ -159,7 +159,7 @@
                     uib-typeahead="item.id as item.value for item in getTypeaheadValues( input, $viewValue )"
                     typeahead-editable="false"
                     typeahead-on-select="onSelectTypeahead( input, $item, $model, $label )"
-                    typeahead-min-length="{{ input.typeahead.minLength }}"
+                    typeahead-min-length="input.typeahead.minLength"
                     cn-change="!model.viewModel.formattedRecord[input.key] && onEmptyTypeahead( input.key )"
                     class="form-control"
                     ng-class="{ 'loading-small': model.module.getInput( input.key ).typeahead.isLoading }"
