Adding date-of-death to participant table
This also includes date-of-death-accuracy which provides a way to specify that the day or the month and day are
not known.

--- a/web/app/export/view.tpl.html
+++ b/web/app/export/view.tpl.html
@@ -165,7 +165,9 @@
                  ng-disabled="item.isUpdating"
                  cn-change="model.viewModel.updateRestriction( item.id, 'value' )"
                  maxlength="255"></input>
-          <input ng-if="'dob' == item.restriction.type || 'datetime' == item.restriction.type"
+          <input ng-if="'dob' == item.restriction.type ||
+                        'dod' == item.restriction.type ||
+                        'datetime' == item.restriction.type"
                  class="form-control"
                  type="text"
                  ng-click="model.viewModel.selectDatetime( $index )"
