--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -130,6 +130,7 @@
                 ng-attr-id="{{ input.key }}"
                 name="name"
                 ng-options="item.value as item.name for item in input.enumList"
+                cn-options-disabled="item.disabled for item in input.enumList"
                 ng-model="record[input.key]"
                 ng-change="check( input.key )"
                 class="form-control"
