--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -1,5 +1,5 @@
 <div class="container-fluid bg-primary rounded-top"><h4>{{ model.addModel.heading }}</h4></div>
-<form name="form" class="form-horizontal" novalidate>
+<form name="form" class="form-horizontal" novalidate><fieldset ng-disabled="!isComplete">
   <div class="form-footer text-right bg-info" ng-if="footerAtTop">
     <cn-extra-operation-button-group model="model" class="pull-left" state="$state" type="add">
     </cn-extra-operation-button-group>
@@ -278,4 +278,4 @@
       <i class="glyphicon glyphicon-cloud-upload"></i> Save
     </button>
   </div>
-</form>
+</fieldset></form>
