Adding new cn-view-input and cn-add-input directives
This is to allow greater modulurization and customization of add/view inputs

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -15,259 +15,17 @@
            style="margin-bottom:2px; cursor:pointer;">
         <h4>{{ group.title }}</h4>
       </div>
-      <ng-form ng-repeat="input in group.inputArray"
-               ng-if="true != input.exclude && 'add' != input.exclude && 'hidden' != input.type"
-               name="innerForm">
-        <div class="form-group"
-             ng-class="{'first-form-group':group.title.length && $first,
-                        'has-feedback has-error': innerForm.name.$dirty && innerForm.name.$invalid}">
-          <label for="{{ input.key }}"
-                 class="col-sm-3 control-label"
-                 uib-tooltip="{{ input.help }}">{{ input.title }}</label>
-          <div class="col-sm-9">
-            <div class="input-group"
-                 ng-switch="input.type|cnViewType"
-                 ng-class="{ 'has-feedback has-error': innerForm.name.$dirty && innerForm.name.$invalid }">
-              <input ng-switch-when="string"
-                ng-attr-id="{{ input.key }}"
-                name="name"
-                ng-model="record[input.key]"
-                cn-change="check( input.key )"
-                class="form-control"
-                type="text"
-                autocomplete="off"
-                ng-readonly="true === input.constant || 'add' == input.constant"
-                ng-required="model.metadata.columnList[input.key].required"></input>
-              <div ng-switch-when="size">
-                <div class="col-sm-8 col-slim">
-                  <input ng-attr-id="{{ input.key }}"
-                    name="name"
-                    ng-model="formattedRecord[input.key][0]"
-                    cn-change="check( input.key )"
-                    class="form-control"
-                    type="text"
-                    autocomplete="off"
-                    ng-readonly="true === input.constant || 'add' == input.constant"
-                    ng-required="model.metadata.columnList[input.key].required"></input>
-                </div>
-                <div class="col-sm-4 col-slim">
-                  <select ng-attr-id="{{ input.key }}"
-                          name="name"
-                          ng-model="formattedRecord[input.key][1]"
-                          ng-change="check( input.key )"
-                          class="form-control"
-                          ng-disabled="true === input.constant || 'add' == input.constanta"
-                          ng-required="model.metadata.columnList[input.key].required">
-                    <option ng-disabled="null === record[input.key]" value="Bytes">Bytes</option>
-                    <option ng-disabled="null === record[input.key]" value="KB">KB</option>
-                    <option ng-disabled="null === record[input.key]" value="MB">MB</option>
-                    <option ng-disabled="null === record[input.key]" value="GB">GB</option>
-                    <option ng-disabled="null === record[input.key]" value="TB">TB</option>
-                    <option ng-disabled="null === record[input.key]" value="PB">PB</option>
-                    <option ng-disabled="null === record[input.key]" value="EB">EB</option>
-                  </select>
-                  </div>
-                </div>
-              <input ng-switch-when="typeahead"
-                ng-attr-id="{{ input.key }}"
-                name="name"
-                ng-model="record[input.key]"
-                uib-typeahead="item for item in getTypeaheadValues( input, $viewValue )"
-                typeahead-editable="false"
-                typeahead-on-select="onSelectTypeahead( input, $item, $model, $label )"
-                typeahead-min-length="input.typeahead.minLength"
-                cn-change="check( input.key )"
-                class="form-control"
-                ng-class="{ 'loading-small': input.typeahead.isLoading }"
-                type="text"
-                placeholder="(Type the first few letters to search possible values)"
-                autocomplete="off"
-                ng-required="model.metadata.columnList[input.key].required"></input>
-              <input ng-switch-when="lookup-typeahead"
-                ng-attr-id="{{ input.key }}"
-                name="name"
-                ng-model="formattedRecord[input.key]"
-                uib-typeahead="item.id as item.value for item in getTypeaheadValues( input, $viewValue )"
-                typeahead-editable="false"
-                typeahead-on-select="onSelectTypeahead( input, $item, $model, $label )"
-                typeahead-min-length="input.typeahead.minLength"
-                cn-change="check( input.key )"
-                class="form-control"
-                ng-class="{ 'loading-small': input.typeahead.isLoading }"
-                type="text"
-                placeholder="(Type the first few letters to search possible values)"
-                autocomplete="off"
-                ng-required="model.metadata.columnList[input.key].required"></input>
-              <input ng-switch-when="datetime"
-                ng-attr-id="{{ input.key }}"
-                name="name"
-                ng-model="record[input.key]"
-                ng-required="model.metadata.columnList[input.key].required"
-                type="hidden"></input>
-              <input ng-switch-when="datetime"
-                ng-model="formattedRecord[input.key]"
-                cn-change="check( input.key )"
-                class="form-control"
-                type="text"
-                ng-click="true === input.constant || 'add' == input.constant ? null : selectDatetime( input )"
-                ng-readonly="true === input.constant || 'add' == input.constant"
-                onkeydown="return false"></input>
-              <input ng-switch-when="color"
-                ng-attr-id="{{ input.key }}"
-                name="name"
-                ng-model="record[input.key]"
-                cn-change="check( input.key )"
-                class="form-control"
-                type="text"
-                colorpicker="hex"
-                colorpicker-size="200"
-                colorpicker-close-on-select
-                autocomplete="off"
-                ng-readonly="true === input.constant || 'add' == input.constant"
-                ng-required="model.metadata.columnList[input.key].required"
-                onkeydown="return false"></input>
-              <select ng-switch-when="select"
-                ng-attr-id="{{ input.key }}"
-                name="name"
-                ng-options="item.value as item.name for item in input.enumList"
-                cn-options-disabled="item.disabled for item in input.enumList"
-                ng-model="record[input.key]"
-                ng-change="check( input.key )"
-                class="form-control"
-                ng-disabled="true === input.constant || 'add' == input.constant ||
-                             !input.enumList || 1 >= input.enumList.length"
-                ng-required="model.metadata.columnList[input.key].required"></select>
-              <textarea ng-switch-when="text"
-                cn-elastic
-                ng-attr-id="{{ input.key }}"
-                name="name"
-                ng-model="record[input.key]"
-                cn-change="check( input.key )"
-                class="form-control"
-                ng-readonly="true === input.constant || 'add' == input.constant"
-                ng-required="model.metadata.columnList[input.key].required"></textarea>
-              <div ng-switch-when="days" class="row">
-                <div class="col-sm-1" style="width: 14.28%">
-                  <label class="checkbox" style="left: 20px" for="sunday">
-                    <input id="sunday" name="name" ng-model="record.sunday" type="checkbox"> Sunday
-                  </label>
-                </div>
-                <div class="col-sm-1" style="width: 14.28%">
-                  <label class="checkbox" style="left: 20px" for="monday">
-                    <input id="monday" name="name" ng-model="record.monday" type="checkbox"> Monday
-                  </label>
-                </div>
-                <div class="col-sm-1" style="width: 14.28%">
-                  <label class="checkbox" style="left: 20px" for="tuesday">
-                    <input id="tuesday" name="name" ng-model="record.tuesday" type="checkbox"> Tuesday
-                  </label>
-                </div>
-                <div class="col-sm-1" style="width: 14.28%">
-                  <label class="checkbox" style="left: 20px" for="wednesday">
-                    <input id="wednesday" name="name" ng-model="record.wednesday" type="checkbox"> Wednesday
-                  </label>
-                </div>
-                <div class="col-sm-1" style="width: 14.28%">
-                  <label class="checkbox" style="left: 20px" for="thursday">
-                    <input id="thursday" name="name" ng-model="record.thursday" type="checkbox"> Thursday
-                  </label>
-                </div>
-                <div class="col-sm-1" style="width: 14.28%">
-                  <label class="checkbox" style="left: 20px" for="friday">
-                    <input id="friday" name="name" ng-model="record.friday" type="checkbox"> Friday
-                  </label>
-                </div>
-                <div class="col-sm-1" style="width: 14.28%">
-                  <label class="checkbox" style="left: 20px" for="saturday">
-                    <input id="saturday" name="name" ng-model="record.saturday" type="checkbox"> Saturday
-                  </label>
-                </div>
-              </div>
-              <div ng-switch-when="months" class="row">
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="january">
-                    <input id="january" name="name" ng-model="record.january" type="checkbox"> January
-                  </label>
-                </div>
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="february">
-                    <input id="february" name="name" ng-model="record.february" type="checkbox"> February
-                  </label>
-                </div>
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="march">
-                    <input id="march" name="name" ng-model="record.march" type="checkbox"> March
-                  </label>
-                </div>
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="april">
-                    <input id="april" name="name" ng-model="record.april" type="checkbox"> April
-                  </label>
-                </div>
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="may">
-                    <input id="may" name="name" ng-model="record.may" type="checkbox"> May
-                  </label>
-                </div>
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="june">
-                    <input id="june" name="name" ng-model="record.june" type="checkbox"> June
-                  </label>
-                </div>
-              </div>
-              <div ng-switch-when="months" class="row">
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="july">
-                    <input id="july" name="name" ng-model="record.july" type="checkbox"> July
-                  </label>
-                </div>
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="august">
-                    <input id="august" name="name" ng-model="record.august" type="checkbox"> August
-                  </label>
-                </div>
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="september">
-                    <input id="september" name="name" ng-model="record.september" type="checkbox"> September
-                  </label>
-                </div>
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="october">
-                    <input id="october" name="name" ng-model="record.october" type="checkbox"> October
-                  </label>
-                </div>
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="november">
-                    <input id="november" name="name" ng-model="record.november" type="checkbox"> November
-                  </label>
-                </div>
-                <div class="col-sm-2">
-                  <label class="checkbox" style="left: 20px" for="december">
-                    <input id="december" name="name" ng-model="record.december" type="checkbox"> December
-                  </label>
-                </div>
-              </div>
-            </div>
-            <span ng-if="innerForm.name.$invalid && innerForm.name.$dirty">
-              <span class="help-block" ng-if="innerForm.name.$error.required">
-                Cannot be blank
-              </span>
-              <span class="help-block" ng-if="innerForm.name.$error.format">
-                Invalid format
-              </span>
-              <span class="help-block" ng-if="innerForm.name.$error.conflict">
-                Conflicts with existing record
-              </span>
-              <span class="help-block" ng-if="innerForm.name.$error.editable">
-                Must be chosen from type-ahead list
-              </span>
-              <span class="help-block" ng-if="innerForm.name.$error.custom">
-                {{ innerForm.name.$error.custom }}
-              </span>
-            </span>
-          </div>
-        </div>
-      </ng-form>
+      <cn-add-input
+        ng-repeat="input in group.inputArray"
+        ng-if="true != input.exclude && 'add' != input.exclude && 'hidden' != input.type"
+        record="record"
+        formatted-record="formattedRecord"
+        model="model"
+        input="input"
+        state="$state"
+        first="group.title.length && $first"
+        parent-form="innerForm">
+      </cn-add-input>
     </div>
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
