--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg-primary rounded-top"><h4>{{ model.addModel.heading }}</h4></div>
 <form name="form" class="form-horizontal" novalidate><fieldset ng-disabled="!isComplete">
   <div class="form-footer text-right bg-info" ng-if="footerAtTop">
-    <cn-extra-operation-button-group model="model" class="pull-left" state="$state" type="add">
+    <cn-extra-operation-button-group model="model" class="pull-left" type="add">
     </cn-extra-operation-button-group>
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="save()" ng-disabled="isAdding">
@@ -22,14 +22,13 @@
         formatted-record="formattedRecord"
         model="model"
         input="input"
-        state="$state"
         first="group.title.length && $first"
         parent-form="innerForm">
       </cn-add-input>
     </div>
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
-    <cn-extra-operation-button-group class="pull-left" model="model" state="$state" type="add">
+    <cn-extra-operation-button-group class="pull-left" model="model" type="add">
     </cn-extra-operation-button-group>
     <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
     <button type="button" class="btn btn-primary" ng-click="save()" ng-disabled="isAdding">
