--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -29,7 +29,7 @@
   </div>
   <form name="form" class="form-horizontal" novalidate><fieldset ng-disabled="!isComplete">
     <div class="form-footer text-right bg-info" ng-if="footerAtTop">
-      <cn-extra-operation-button-group class="pull-left" model="model" state="$state" type="view">
+      <cn-extra-operation-button-group class="pull-left" model="model" type="view">
       </cn-extra-operation-button-group>
       <div class="btn-group">
         <button ng-if="model.getDeleteEnabled()"
@@ -79,7 +79,6 @@
             ng-if="true != input.exclude && 'view' != input.exclude && 'hidden' != input.type"
             model="model"
             input="input"
-            state="$state"
             first="group.title.length && $first"
             parent-form="innerForm">
           </cn-view-input>
@@ -87,7 +86,7 @@
       </div>
     </div>
     <div class="form-footer text-right rounded-bottom bg-info">
-      <cn-extra-operation-button-group class="pull-left" model="model" state="$state" type="view">
+      <cn-extra-operation-button-group class="pull-left" model="model" type="view">
       </cn-extra-operation-button-group>
       <div class="btn-group">
         <button ng-if="model.getDeleteEnabled()"
