Removing unneeded attribute

--- a/web/app/cenozo/record-calendar.tpl.html
+++ b/web/app/cenozo/record-calendar.tpl.html
@@ -52,7 +52,7 @@
     <div class="container-fluid spacer calendar"></div>
   </div>
   <div class="form-footer text-right rounded-bottom bg-info">
-    <cn-extra-operation-button-group class="pull-left" model="model" state="$state" type="calendar">
+    <cn-extra-operation-button-group class="pull-left" model="model" type="calendar">
     </cn-extra-operation-button-group>
     <div class="btn-group" ng-if="viewList">
       <button class="btn btn-primary"
