Removing unneeded attribute from record-add template

--- a/web/app/cenozo/record-add.tpl.html
+++ b/web/app/cenozo/record-add.tpl.html
@@ -22,8 +22,7 @@
         formatted-record="formattedRecord"
         model="model"
         input="input"
-        first="group.title.length && $first"
-        parent-form="innerForm">
+        first="group.title.length && $first">
       </cn-add-input>
     </div>
   </div>
